--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Pictures.loader.js";
+      var loaderUrl = buildUrl + "/3D Objects.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Pictures.data",
-        frameworkUrl: buildUrl + "/Pictures.framework.js",
-        codeUrl: buildUrl + "/Pictures.wasm",
+        dataUrl: buildUrl + "/3D Objects.data",
+        frameworkUrl: buildUrl + "/3D Objects.framework.js",
+        codeUrl: buildUrl + "/3D Objects.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "cyberpunk",
