--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/3D Objects.loader.js";
+      var loaderUrl = buildUrl + "/cyberpunk_build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/3D Objects.data",
-        frameworkUrl: buildUrl + "/3D Objects.framework.js",
-        codeUrl: buildUrl + "/3D Objects.wasm",
+        dataUrl: buildUrl + "/cyberpunk_build.data",
+        frameworkUrl: buildUrl + "/cyberpunk_build.framework.js",
+        codeUrl: buildUrl + "/cyberpunk_build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "cyberpunk",
-        productVersion: "3.0.0",
+        productVersion: "1.0.0",
         showBanner: unityShowBanner,
       };
 
